[package]
name = "biodb"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
chrono = "0.4"
rusqlite = { version = "0.27.0", features = ["bundled"] }
clap = { version = "3.2.5", features = ["derive"] }
lazy_static = "1.4.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.18.0"
bincode = "1.3"


