[package]
name = "biotools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
serde = { version = "1.0.104", features = ["derive"] }
chrono = "0.4"
lazy_static = "1.4.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }
log = "0.4.0"
regex = "1.5"
uuid = { version = "0.8.1", features = ["serde", "v4"] }


